--- a/Person UI/Base.lproj/Main.storyboard
+++ b/Person UI/Base.lproj/Main.storyboard
@@ -36,13 +36,6 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="21" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="28h-GC-MKT">
-                                <rect key="frame" x="341" y="71" width="18" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="TXz-ac-dfs">
                                 <rect key="frame" x="96" y="108.5" width="117" height="29"/>
                                 <segments>
@@ -56,13 +49,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="21" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fj4-QW-TRL">
-                                <rect key="frame" x="341" y="71" width="18" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="Ts3-pG-TZ3">
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="21" minValue="0.0" maxValue="130" translatesAutoresizingMaskIntoConstraints="NO" id="Ts3-pG-TZ3">
                                 <rect key="frame" x="94" y="66.5" width="239" height="31"/>
                             </slider>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="oMx-Do-0Ka">
@@ -72,14 +59,19 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="21" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U5y-Jc-jV7">
+                                <rect key="frame" x="341" y="71" width="18" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="oMx-Do-0Ka" firstAttribute="top" secondItem="TXz-ac-dfs" secondAttribute="bottom" constant="15" id="0hH-A8-ju5"/>
-                            <constraint firstItem="fj4-QW-TRL" firstAttribute="leading" secondItem="Ts3-pG-TZ3" secondAttribute="trailing" constant="10" id="6zL-yJ-Pkj"/>
                             <constraint firstItem="tfl-vN-nlC" firstAttribute="leading" secondItem="e1n-Kk-CGN" secondAttribute="trailing" constant="10" id="7iC-9C-nfI"/>
                             <constraint firstItem="Ly5-uu-X0a" firstAttribute="top" secondItem="ecq-Hd-bTQ" secondAttribute="bottom" constant="20" id="8Ly-ln-Utt"/>
-                            <constraint firstItem="fj4-QW-TRL" firstAttribute="centerY" secondItem="ecq-Hd-bTQ" secondAttribute="centerY" id="C2u-xJ-vtL"/>
+                            <constraint firstItem="U5y-Jc-jV7" firstAttribute="leading" secondItem="Ts3-pG-TZ3" secondAttribute="trailing" constant="10" id="FCM-XT-qmd"/>
                             <constraint firstItem="Ts3-pG-TZ3" firstAttribute="centerY" secondItem="ecq-Hd-bTQ" secondAttribute="centerY" id="NS6-Ts-ZbM"/>
                             <constraint firstItem="TXz-ac-dfs" firstAttribute="centerY" secondItem="Ly5-uu-X0a" secondAttribute="centerY" id="Ohm-7G-fSY"/>
                             <constraint firstItem="Ly5-uu-X0a" firstAttribute="trailing" secondItem="ecq-Hd-bTQ" secondAttribute="trailing" id="R0v-mG-4L9"/>
@@ -87,12 +79,13 @@
                             <constraint firstAttribute="trailingMargin" secondItem="oMx-Do-0Ka" secondAttribute="trailing" id="XhV-eo-rT6"/>
                             <constraint firstItem="e1n-Kk-CGN" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="Xm7-zS-Q5y"/>
                             <constraint firstItem="TXz-ac-dfs" firstAttribute="leading" secondItem="Ly5-uu-X0a" secondAttribute="trailing" constant="10" id="ZnQ-6w-wPF"/>
+                            <constraint firstItem="U5y-Jc-jV7" firstAttribute="centerY" secondItem="ecq-Hd-bTQ" secondAttribute="centerY" id="fgB-8F-amx"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="U5y-Jc-jV7" secondAttribute="trailing" id="gki-Ua-LJo"/>
                             <constraint firstItem="ecq-Hd-bTQ" firstAttribute="top" secondItem="e1n-Kk-CGN" secondAttribute="bottom" constant="20" id="i9Q-tL-N5Y"/>
                             <constraint firstAttribute="trailingMargin" secondItem="tfl-vN-nlC" secondAttribute="trailing" id="pyT-NU-rov"/>
                             <constraint firstItem="Ts3-pG-TZ3" firstAttribute="leading" secondItem="ecq-Hd-bTQ" secondAttribute="trailing" constant="10" id="sXz-b1-XY1"/>
                             <constraint firstItem="e1n-Kk-CGN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="vA5-6M-tsv"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="oMx-Do-0Ka" secondAttribute="bottom" id="w42-IW-rE3"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="fj4-QW-TRL" secondAttribute="trailing" id="xmx-I9-tvc"/>
                             <constraint firstItem="ecq-Hd-bTQ" firstAttribute="trailing" secondItem="e1n-Kk-CGN" secondAttribute="trailing" id="ylH-nf-p9V"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -100,7 +93,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
+            <point key="canvasLocation" x="444" y="10.344827586206897"/>
         </scene>
     </scenes>
 </document>
