--- a/Person UI/Base.lproj/Main.storyboard
+++ b/Person UI/Base.lproj/Main.storyboard
@@ -43,8 +43,8 @@
                                     <segment title="Male"/>
                                 </segments>
                             </segmentedControl>
-                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter name here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tfl-vN-nlC">
-                                <rect key="frame" x="96" y="25.5" width="263" height="30"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter name here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tfl-vN-nlC">
+                                <rect key="frame" x="96" y="30" width="263" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -74,6 +74,7 @@
                             <constraint firstItem="U5y-Jc-jV7" firstAttribute="leading" secondItem="Ts3-pG-TZ3" secondAttribute="trailing" constant="10" id="FCM-XT-qmd"/>
                             <constraint firstItem="Ts3-pG-TZ3" firstAttribute="centerY" secondItem="ecq-Hd-bTQ" secondAttribute="centerY" id="NS6-Ts-ZbM"/>
                             <constraint firstItem="TXz-ac-dfs" firstAttribute="centerY" secondItem="Ly5-uu-X0a" secondAttribute="centerY" id="Ohm-7G-fSY"/>
+                            <constraint firstItem="tfl-vN-nlC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="Q4q-Cd-G41"/>
                             <constraint firstItem="Ly5-uu-X0a" firstAttribute="trailing" secondItem="ecq-Hd-bTQ" secondAttribute="trailing" id="R0v-mG-4L9"/>
                             <constraint firstItem="oMx-Do-0Ka" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="U5p-wR-Acx"/>
                             <constraint firstAttribute="trailingMargin" secondItem="oMx-Do-0Ka" secondAttribute="trailing" id="XhV-eo-rT6"/>
